--- a/css/projects.css
+++ b/css/projects.css
@@ -57,6 +57,11 @@ H4 {
         margin-bottom: 1.9rem;
 }
 
+.copyright {
+    font-family: 'Fredericka the Great', cursive;
+    text-align: center;
+    color:#ff1d8e;
+}
 #develop{
 font-size:100px;
     line-height: 10px;
@@ -162,50 +167,6 @@ a:hover
 }
 
 
-#cameraFeel {
-    float: right;
-    width: 40%;
-    height: 40%;
-    margin-right: 50px;
-    padding: 0px;
-    border-style: none;
-    color: white;
-    font-size: 90px;
-}
-#cameraFeel:hover {
-    color: grey;
-}
-
-
-
-#pencilFeel {
-    float: right;
-    width: 40%;
-    /* height: 40%; */
-    margin-right: 50px;
-    padding: 0px;
-    color: white;
-    font-size: 90px;
-
-}
-#pencilFeel:hover {
-    color: grey;
-}
-
-#textCamera {
-    font-size: 40px;
-    color: white;
-    padding-left: none;
-    text-align: center;
-    font-family: 'Lato', sans-serif;
-}
-#textPencil {
-    font-size: 40px;
-    color: white;
-    padding-left: none;
-    text-align: center;
-    font-family: 'Lato', sans-serif; 
-}
 
 
 /* START timeline */
@@ -352,115 +313,7 @@ a:hover
 
 /* END timeline */
  
-/* START CARO Pics */
 
-.image-hover-wrapper {
-    position: relative;
-    background: white;
-    /* padding: 10%; */
-    margin-bottom: 2%;
-    border-radius: 1%;
-    padding: 20px;
-     font-family: 'Open Sans Condensed', sans-serif;
-     font-size: 24px;
-     max-width: 90%;
-}
-
-.image-hover-wrapper a {
-  display: inline-block;
-  letter-spacing: normal;
-  line-height: initial;
-  margin: 0;
-  padding: 0;
-  position: relative;
-}
-
-.image-hover-wrapper a img {
-  float: left;
-  overflow: hidden;
-  width: 100%;
-}
-
-.image-hover-wrapper a .image-hover-wrapper-reveal {
-  background-color: rgba(1, 2, 3, .7);
-  color: #fefefe;
-  display: inline;
-  height: 100%;
-  margin-left: -100%;
-  opacity: 0;
-  position: absolute;
-  width: 100%;
-  z-index: 80;
-  transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  transition-delay: 0.25s;
-}
-
-.image-hover-wrapper a .image-hover-wrapper-reveal:hover {
-  opacity: 1;
-  transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
-}
-
-.image-hover-wrapper a .image-hover-wrapper-reveal:hover p {
-  opacity: 1;
-  -webkit-transform: translateY(-100%);
-      -ms-transform: translateY(-100%);
-          transform: translateY(-100%);
-  transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  transition-delay: 0.25s;
-}
-
-.image-hover-wrapper a .image-hover-wrapper-reveal p {
-    /* bottom: 20px; */
-    display: block;
-    opacity: 1;
-    position: absolute;
-    top: 50%;
-    left: 30%;
-    color: black;
-    background: white;
-    border: #FF4136 5px solid;
-    border-radius: 14px;
-    padding: 2%;
-    text-align: center;
-    width: 25%;
-    transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
-}
-
-.image-hover-wrapper a .fa {
-  font-size: 24px;
-}
-
-
-.image-hover-wrapper .image-hover-wrapper-banner {
-    background-color: #444;
-    color: white;
-    /* font-weight: 600; */
-    left: 0;
-    padding: 0.8rem;
-    position: absolute;
-    top: 7%;
-    left: 101%;
-    width: 15%;
-    z-index: 0;
-    border-radius: 8px;
-    text-align: center;
-}
- .bold {
-/* font-weight: bolder; */
-color: darkgrey;
-    font-family: 'Georgia', serif;
-    font-size:18px;
-}
-
-
-/* END CARO Pics  */
-
-
-#yourTextColor {
-    border-radius: 20%;
-    height: 3%;
-    width: 3% ;background: white;
-}
 .question {
     position: relative;
     padding: 10px 0;
