betta pgs: proj y Res

--- a/css/app.css
+++ b/css/app.css
@@ -218,7 +218,7 @@ button #getColorButton:focus {
 
 .projectsReveal {
          visibility: hidden;
-             color: #ff1d8e;
+             color: white;
            font-family: 'Fredericka the Great', cursive;
 }
             
@@ -228,14 +228,33 @@ button #getColorButton:focus {
 
 .resumeReveal {
          visibility: hidden;
-             color: #ff1d8e;
-                font-family: 'Fredericka the Great', cursive;
+             color: white;
+            font-family: 'Fredericka the Great', cursive;
 }
             
 .id-card:hover .resumeReveal {
  visibility: visible; 
 }
 
+.emailReveal {
+         visibility: hidden;
+             color: white;
+            font-family: 'Fredericka the Great', cursive;
+}
+            
+.mail:hover .emailReveal {
+ visibility: visible; 
+}
+
+.phoneReveal {
+         visibility: hidden;
+             color: white;
+            font-family: 'Fredericka the Great', cursive;
+}
+            
+.phone:hover .phoneReveal {
+ visibility: visible; 
+}
 .copyright {
     font-family: 'Fredericka the Great', cursive;
     text-align: center;
