--- a/css/app.css
+++ b/css/app.css
@@ -46,6 +46,8 @@ H4 {
     font-weight: bolder;
     color: white;
         margin-bottom: 1.9rem;
+        /* margin-top: -100px; */
+
 }
 
 #develop{
@@ -59,10 +61,17 @@ img {
     max-width: 100%;
     height: auto;
     -ms-interpolation-mode: bicubic;
-    margin-bottom: -35px;
+    /* margin-bottom: -30px; */
 }
  
-
+.megaText {
+    font-family: Comfortaa;
+    line-height: auto;
+    margin-bottom: auto;
+    font-size: 25px;
+    text-align: center;
+    font-weight: bolder;
+}
 
 a {
     color: white;
@@ -479,6 +488,9 @@ font-size:110px;
     margin-bottom: unset;
 }
 
+#mega{
+    margin-bottom: unset;
+}
 .rounded-social-buttons {
     text-align: center;
     margin-bottom: -15px;
