georgia to Georgia 2 fix rez subtitle

--- a/css/resume.css
+++ b/css/resume.css
@@ -60,7 +60,7 @@ H4 {
 .subtitle{
      font-size: 58px;
       text-align: center;
-       font-family: georgia;
+       font-family: 'Georgia';
        padding: 10px;
        margin: 0 20px;
        line-height: initial;
