--- a/css/app.css
+++ b/css/app.css
@@ -51,8 +51,10 @@ H4 {
 }
 
 #develop{
-font-size:100px;
-    line-height: 10px;
+font-size:120px;
+line-height: 10px;
+font-family: Fredericka the Great;
+font-weight: 100;
 }
  
 img {
@@ -84,8 +86,6 @@ a:hover
      text-decoration:none; 
      cursor:pointer;  
 }
-
-   
 
 .rezTitle{
     font-family:'Monofett', cursive; 
@@ -449,22 +449,22 @@ font-size:110px;
  visibility: visible; 
 }
 
-
-
- H4 {
+H4 {
     font-family: 'Georgia', serif;
-    line-height: 65px;
-    font-size: 76px;
+    line-height: 50px;
+    font-size: 67px;
     text-align: center;
     color: white;
     font-weight: bold;
     margin-top: unset;
-        margin-bottom: 40px;
+    margin-bottom: 40px;
 }
 #develop {
-    font-size: 42px;
-    line-height: 10px;
-    text-align: center;
+    font-size: 50px;
+    line-height: 7px;
+    text-align: left;
+    font-family: Fredericka the Great;
+    font-weight: 400;
 }
 
    .leslieTitle {
