--- a/css/resume.css
+++ b/css/resume.css
@@ -63,7 +63,7 @@ H4 {
       font-family: 'Georgia', serif;
        padding: 10px;
        margin: 0 20px;
-       line-height: initial;
+       line-height: 40px;
 }
 
 #develop{
@@ -339,9 +339,12 @@ button #getColorButton:focus {
 
 .rezDetails {
     color: whitesmoke;
+   
 }
 
-
+a.rezStories{
+    font-size: 38px;
+}
 
  
 
@@ -551,7 +554,7 @@ font-size:110px;
 
 .subtitle {
     color: white;
-    font-size: 38px;
+    font-size: 28px;
     text-align: center;
     font-family: 'Georgia', serif;
     margin-bottom: 22px;
@@ -561,7 +564,7 @@ font-size:110px;
 .rounded-social-buttons {
     text-align: center;
     margin-bottom: -15px;
-    margin-top: -15px;
+    margin-top: -44px;
 }
 
 .rounded-social-buttons .social-button {
