--- a/css/projects.css
+++ b/css/projects.css
@@ -97,7 +97,7 @@ H4 {
  visibility: visible; 
 }
 .copyright {
-    font-family: 'Fredericka the Great', cursive;
+    font-family: 'Georgia', serif;
     text-align: center;
     color:#ff1d8e;
 }
