immpact font -> coda

--- a/css/resume.css
+++ b/css/resume.css
@@ -425,7 +425,7 @@ padding: 2rem;
     border-bottom: 1px solid #666;
     font-weight: normal;
     margin-bottom: 1rem;
-    font-family: impact;
+    font-family: 'coda', sans-serif;
     color: black;
     font-size: 43px;
 }
