--- a/css/app.css
+++ b/css/app.css
@@ -1,10 +1,13 @@
     
 body {
     background: black;
+
+    
     color: whitesmoke;
 }
 .callout {
     background: black;
+    
     padding: 10px;
     color: white;
     text-align: right;
@@ -43,6 +46,12 @@ H4 {
     color: white;
         margin-bottom: 1.9rem;
         /* margin-top: -100px; */
+        /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#010101+1,000000+3,010101+5,202020+7,484848+8,1b1b1b+12,000000+14,040404+46,000000+51,030303+53,2a2a2a+76,000000+82,010101+91,020202+97,080808+100 */
+background: rgb(1,1,1); /* Old browsers */
+background: -moz-linear-gradient(left, rgba(1,1,1,1) 1%, rgba(0,0,0,1) 3%, rgba(1,1,1,1) 5%, rgba(32,32,32,1) 7%, rgba(72,72,72,1) 8%, rgba(27,27,27,1) 12%, rgba(0,0,0,1) 14%, rgba(4,4,4,1) 46%, rgba(0,0,0,1) 51%, rgba(3,3,3,1) 53%, rgba(42,42,42,1) 76%, rgba(0,0,0,1) 82%, rgba(1,1,1,1) 91%, rgba(2,2,2,1) 97%, rgba(8,8,8,1) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(left, rgba(1,1,1,1) 1%,rgba(0,0,0,1) 3%,rgba(1,1,1,1) 5%,rgba(32,32,32,1) 7%,rgba(72,72,72,1) 8%,rgba(27,27,27,1) 12%,rgba(0,0,0,1) 14%,rgba(4,4,4,1) 46%,rgba(0,0,0,1) 51%,rgba(3,3,3,1) 53%,rgba(42,42,42,1) 76%,rgba(0,0,0,1) 82%,rgba(1,1,1,1) 91%,rgba(2,2,2,1) 97%,rgba(8,8,8,1) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to right, rgba(1,1,1,1) 1%,rgba(0,0,0,1) 3%,rgba(1,1,1,1) 5%,rgba(32,32,32,1) 7%,rgba(72,72,72,1) 8%,rgba(27,27,27,1) 12%,rgba(0,0,0,1) 14%,rgba(4,4,4,1) 46%,rgba(0,0,0,1) 51%,rgba(3,3,3,1) 53%,rgba(42,42,42,1) 76%,rgba(0,0,0,1) 82%,rgba(1,1,1,1) 91%,rgba(2,2,2,1) 97%,rgba(8,8,8,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#010101', endColorstr='#080808',GradientType=1 ); /* IE6-9 */
 
 }
 .plusSignHero{
