--- a/css/projects.css
+++ b/css/projects.css
@@ -42,6 +42,14 @@ font-size:80px;
         text-align: center;
 }
 
+#bluePic {
+    display: inline-block;
+    vertical-align: middle;
+    max-width: 15%;
+    height: 20%;
+    margin-bottom: unset;
+    margin-left: -13px;
+}
 
 H4 {
     font-family: 'Georgia', serif;
