--- a/css/app.css
+++ b/css/app.css
@@ -40,23 +40,35 @@ H4 {
     font-family: 'Georgia', serif;
     letter-spacing: .0em;
     line-height: 133px;
-    font-size: 202px;
+    font-size: 182px;
     text-align: center;
     font-weight: bolder;
     color: white;
-        margin-bottom: 1.9rem;
+        margin-bottom: 1rem;
+        margin-top: 15px;
         /* margin-top: -100px; */
         /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#010101+1,000000+3,010101+5,202020+7,484848+8,1b1b1b+12,000000+14,040404+46,000000+51,030303+53,2a2a2a+76,000000+82,010101+91,020202+97,080808+100 */
-background: rgb(1,1,1); /* Old browsers */
-background: -moz-linear-gradient(left, rgba(1,1,1,1) 1%, rgba(0,0,0,1) 3%, rgba(1,1,1,1) 5%, rgba(32,32,32,1) 7%, rgba(72,72,72,1) 8%, rgba(27,27,27,1) 12%, rgba(0,0,0,1) 14%, rgba(4,4,4,1) 46%, rgba(0,0,0,1) 51%, rgba(3,3,3,1) 53%, rgba(42,42,42,1) 76%, rgba(0,0,0,1) 82%, rgba(1,1,1,1) 91%, rgba(2,2,2,1) 97%, rgba(8,8,8,1) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(left, rgba(1,1,1,1) 1%,rgba(0,0,0,1) 3%,rgba(1,1,1,1) 5%,rgba(32,32,32,1) 7%,rgba(72,72,72,1) 8%,rgba(27,27,27,1) 12%,rgba(0,0,0,1) 14%,rgba(4,4,4,1) 46%,rgba(0,0,0,1) 51%,rgba(3,3,3,1) 53%,rgba(42,42,42,1) 76%,rgba(0,0,0,1) 82%,rgba(1,1,1,1) 91%,rgba(2,2,2,1) 97%,rgba(8,8,8,1) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to right, rgba(1,1,1,1) 1%,rgba(0,0,0,1) 3%,rgba(1,1,1,1) 5%,rgba(32,32,32,1) 7%,rgba(72,72,72,1) 8%,rgba(27,27,27,1) 12%,rgba(0,0,0,1) 14%,rgba(4,4,4,1) 46%,rgba(0,0,0,1) 51%,rgba(3,3,3,1) 53%,rgba(42,42,42,1) 76%,rgba(0,0,0,1) 82%,rgba(1,1,1,1) 91%,rgba(2,2,2,1) 97%,rgba(8,8,8,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#010101', endColorstr='#080808',GradientType=1 ); /* IE6-9 */
+/* background: rgb(1,1,1); /* Old browsers */
+/* background: -moz-linear-gradient(left, rgba(1,1,1,1) 1%, rgba(0,0,0,1) 3%, rgba(1,1,1,1) 5%, rgba(32,32,32,1) 7%, rgba(72,72,72,1) 8%, rgba(27,27,27,1) 12%, rgba(0,0,0,1) 14%, rgba(4,4,4,1) 46%, rgba(0,0,0,1) 51%, rgba(3,3,3,1) 53%, rgba(42,42,42,1) 76%, rgba(0,0,0,1) 82%, rgba(1,1,1,1) 91%, rgba(2,2,2,1) 97%, rgba(8,8,8,1) 100%); FF3.6-15 */
+/* background: -webkit-linear-gradient(left, rgba(1,1,1,1) 1%,rgba(0,0,0,1) 3%,rgba(1,1,1,1) 5%,rgba(32,32,32,1) 7%,rgba(72,72,72,1) 8%,rgba(27,27,27,1) 12%,rgba(0,0,0,1) 14%,rgba(4,4,4,1) 46%,rgba(0,0,0,1) 51%,rgba(3,3,3,1) 53%,rgba(42,42,42,1) 76%,rgba(0,0,0,1) 82%,rgba(1,1,1,1) 91%,rgba(2,2,2,1) 97%,rgba(8,8,8,1) 100%); */
+ /* Chrome10-25,Safari5.1-6 */
+/* background: linear-gradient(to right, rgba(1,1,1,1) 1%,rgba(0,0,0,1) 3%,rgba(1,1,1,1) 5%,rgba(32,32,32,1) 7%,rgba(72,72,72,1) 8%,rgba(27,27,27,1) 12%,rgba(0,0,0,1) 14%,rgba(4,4,4,1) 46%,rgba(0,0,0,1) 51%,rgba(3,3,3,1) 53%,rgba(42,42,42,1) 76%,rgba(0,0,0,1) 82%,rgba(1,1,1,1) 91%,rgba(2,2,2,1) 97%,rgba(8,8,8,1) 100%);  */
+/* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+/* filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#010101', endColorstr='#080808',GradientType=1 ); IE6-9  */
 
 }
 .plusSignHero{
     font-size: 140px; 
     color:#ff1d8e;
+}
+
+.subtitle{
+    font-size: 58px;
+     text-align: center;
+     font-family: 'Georgia', serif;
+      padding: 10px;
+      margin: 0 20px;
+      line-height: 40px;
 }
 
 #develop{
@@ -69,9 +81,11 @@ font-weight: 100;
 img {
     display: inline-block;
     vertical-align: middle;
-    max-width: 100%;
+    max-width: 10%;
     height: auto;
     -ms-interpolation-mode: bicubic;
+    margin-left: -17px;
+    margin-right: -5px;
     /* margin-bottom: -30px; */
 }
  
@@ -122,35 +136,28 @@ h2 {
     color: white;
     text-align: right;
 }
+/* START SLIDER */
 
-button {
-    /* @extend .transition*/
-    margin-top: 20px;
-    background-color: #FF4136;
-    border: 1px solid #FF4136;
-    line-height: 0;
-    display: inline-block;
-    box-sizing: border-box;
-    padding: 20px 15px;
-    /*      border-radius: 60px;*/
-    color: white;
-    font-weight: 100;
-    letter-spacing: 0.1em;
-    position: relative;
-    top: 20px;
-    z-index: 1;
-    font-size: 18px;
+.fullscreen-image-slider .orbit-image {
+    width: 100%;
+    height: 50vh;
+  }
+  
+  .fullscreen-image-slider .orbit-caption {
+    bottom: 50%;
+    -webkit-transform: translateY(50%);
+        -ms-transform: translateY(50%);
+            transform: translateY(50%);
+    background: none;
+    text-align: center;
+    color: #fefefe;
     font-weight: bold;
-}
-button:hover {
-    color: white;
-    background-color: salmon;
-    border: 2px solid white;
-}
-button #getColorButton:focus {
-    color: white;
-    background-color: #FF4136;
-}
+  }
+  
+  
+/* END SLIDER */
+
+
 #backTop {
      background: #ff1d8e;
     color: white;
@@ -276,7 +283,7 @@ button #getColorButton:focus {
 .copyright {
     font-family: 'Georgia', serif;
     text-align: center;
-    color:#ff1d8e;
+    color:white;
 }
 
  .rounded-social-buttons .social-button.twitter {
@@ -499,6 +506,15 @@ H4 {
     max-width: 15%;
     height: 20%;
     margin-bottom: unset;
+    margin-left: auto;
+}
+.subtitle {
+    color: white;
+    font-size: 28px;
+    text-align: center;
+    font-family: 'Georgia', serif;
+    margin-bottom: 22px;
+    line-height: initial;
 }
 
 #mega{
